--- a/spriteski/package.json
+++ b/spriteski/package.json
@@ -26,7 +26,8 @@
 			"react-app/jest"
 		],
 		"rules": {
-			"no-unused-vars": "off"
+			"no-unused-vars": "off",
+			"react-hooks/exhaustive-deps": "off"
 		}
 	},
 	"browserslist": {
