--- a/sqrrlz-client/package.json
+++ b/sqrrlz-client/package.json
@@ -24,7 +24,8 @@
 			"react-app/jest"
 		],
 		"rules": {
-			"no-unused-vars": "off"
+			"no-unused-vars": "off",
+			"import/no-anonymous-default-export": "off"
 		}
 	},
 	"browserslist": {
